test/domains/sungeun/assoc/expand.1.good
expand.chpl:4: In function 'my_expand':
expand.chpl:5: error: expand not supported on associative domains
expand.chpl:11: Function 'my_expand' instantiated as: my_expand(D: DefaultAssociativeDom(int(64),true), off: int(64))
